2012-04-01  John D. Ramsdell  <ramsdell@mitre.org>

	* datalog.texi (Extending): Added a reference to the addition
	primitive comment in datalog.lua.in.

	* datalog.lua.in (add_iter_prim): Added a comment that shows how
	to add addition as a primitive.

	* datalog.lua.in (mk_intern): Coerced identifiers to be interned
	into a string instead of relying on callers to always provide a
	string.

2012-02-25  John D. Ramsdell  <ramsdell@mitre.org>

	* lua/*: Updated Lua sources to version 5.1.5.

2012-01-19  John D. Ramsdell  <ramsdell@mitre.org>

	* git: Tagged as datalog-1_8 with tag v1.8.

	* datalog.c (dl_open): Fix standard library loading for Lua 5.2.

	* datalog.c (dl_ask): Replace use of lua_strlen and lua_tostring
	with lua_tolstring.

	* datalog.lua.in: Replaced table.getn with #.

	* interp.c (interp, print_version): Remove compiler warnings about
	testing against a constant address.

	* bin2c.c (print_version): Remove compiler warnings about testing
	against a constant address.

	* configure.ac: Corrected the NO_LUA test.  Added check for
	lauxlib.h.  Changed lua function used in lua library check from
	lua_pcall to lua_pushboolean, as lua_pcall is a macro in Lua 5.2.

2012-01-18  John D. Ramsdell  <ramsdell@mitre.org>

	* datalog.lua.in, COPYING.LIB: Fixed the address of the Free
	Software Foundation.

	* datalog.1: Added a manual page.

2011-09-30  John D. Ramsdell  <ramsdell@mitre.org>

	* git: Tagged as datalog-1_7 with tag v1.7.

2011-09-29  John D. Ramsdell  <ramsdell@mitre.org>

	* Makefile.am (lib_LTLIBRARIES): Added support for shared
	libraries via libtool.  The default is static libraries.

2011-09-27  John D. Ramsdell  <ramsdell@mitre.org>

	* configure.ac, Makefile.am, datalog.spec.in: Added --with-lua
	option and when specified, use the installed lua package.

	* acinclude.m4: Changed to be GNU's ax_lua.m4.

2011-09-22  John D. Ramsdell  <ramsdell@mitre.org>

	* datalog.spec.in (BuildRequires): Added build dependency on
	texinfo.
