@@ -27,6 +27,9 @@ Send output to a file (default is standard output).
 .B \-i
 Enter interactive mode after loading input file.
 .TP
+.B \-t
+Print output as tab separated values.
+.TP
 .B \-h
 Display command usage info.
 .TP
